# ML4qf

./: .gitignore  environment.yml  pyproject.toml  requirements.txt  setup.py
examples/: airbus.org  airbus.py  airbus0.py  e1.org  ex2.py  ex3.py  ex_umap.py  example1.py  lstm_classification.org  ml1.org  ml2.org  ml3.org  nfut1h.py  portfolio1.ipynb  read_data.org  test_dataseries.org
examples/Timeseries/: config.py  example_online.py  test_dataseries.org
examples/blacklitterman/: config.py  config_test.py  inputs.py  main.org  main.tex  playing.py
examples/data/: EADSY_2003-10-05_2019-10-01
ml4qf/: __init__.py  config.py  containers.py  inputs.py  main.py  parser.py  transformers.py  utils.py
ml4qf/collectors/: __init__.py  financial_factors.py  financial_features.py  financial_markets.py  yf1.py
ml4qf/graphical/: plotting.py
ml4qf/portfolios/: __init__.py  blacklitterman.py  factors.py  optimization.py
ml4qf/predictors/: model_keras.py  model_som.py  model_stats.py  model_tuning.py  models.py
ml4qf/predictors/supervised/: __init__.py  interface.py  models.py  trees.py  utils.py
ml4qf/solvers/prototypes/: fd1.py  mc1.py
ml4qf/transformers/: financial_data.py
portfolios/: blacklitterman.py
tests/: test_blacklitterman.py  test_factors.py
